Going through all articles

--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -71,22 +71,7 @@ W artykule \cite{de1998optimal} opisane zostało kierowanie ruchem drogowym na j
   Autorzy artykulu \cite{lammer2008self} przedstawili system kontroli świateł i przepływu pojazdów na sieciach drogowych. Rozwiązanie stosowane jest dla całych sieci skrzyżowań. Autorzy opierają się o krótkie prognozu ruchu i na ich podstawie liczą długość trwania światła zielonego. Klasyczne rozwiązania działają na wcześniej obliczonych danych oraz działają we wcześniej określonych miejscach największego ruchu. Takie rozwiązania powodują, że zielona fala trwa dużej niż powinna. W rozwiązaniu zastosowana jest także strategia stabilizacji, która zapewnia fakt, iż długość kolejek nie będzie zbyt długa. Zapewnione jest to przez odpowiednią długość trwania światła zielonego. W rozwiązaniu, na każdym ze skrzyżowań, samochody będą tracic czas na świetle pomarańczowym, które w rozwiązaniu jest konieczne, aby było ono bezpieczne. Ruch jest także optymalizowany dla sytuacji "średnich", które tak na prawdę nigdy nie występują. Wynikiem tego zjawiska jest fakt, że optymalizacja nie jest nigdy stosowana dla prawdziwej, aktualnej sytuacji.
 \newline
 \indent
-\textbf{Zarządzanie światłami za pomocą komunikacji pojazdów między sobą \cite{ferreira2010self}}
-\newline
-Wszystkie auta muszą być wyposażone w:
-\newline
-	- Urządzenia DSRC
-\newline
-  - Tą sama wersję mapy
-\newline
-	- GPS z dokładnością do pasa na którym są
-\newline
-Sieć bezprzewodowa w każdym z samochdów musi być niezawodna
-\newline
-\newline
-\textbf{Krytyka}
-\newline
-Rozwiązanie w porównaniu do mojego jest kosztowne, jeżeli chodzi o wyposażenie. Jest ono możliwe także tylko wtedy kiedy wszystkie auta są odpowiednio wyposażone i sprawne.
+W artykule \cite{ferreira2010self} przedstawiony został system zarządzania światłami za pomocą komunikacji pojazdów między sobą. Działanie systemu opiera się o sensory zamontowany przy skrzyżowaniach oraz urządzenia DSRC zamontowane w każdym z aut. Pojazdy komunikują się ze sobą za pomoca sieci bezprzewodowej, posiadają te same wersje map oraz posiadają GPS z dokładnością do pasa na którym się znajdują. W zależności od zebranych danych system odpowiednio przełącza światła w celu uniknięcia opóźnień. Przedstawione rozwiązanie jest kosztowne oraz pominięta jest kwestia bezpieczeństwa, która w innych rozwiązaniach zapewniona jest poprzez oczekiwaniu na świetle pomarańczowym.
     
 \section{Planowanie ruchu bez sygnalizacji świetlnej}
 
